# sp_vision_25

./: .gitignore  CMakeLists.txt  dump_raw_tty.sh  readme.md
calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
configs/: calibration.yaml  demo.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
docs/: jetson_orin_nx_auto_buff_setup.md
io/: CMakeLists.txt  camera.cpp  command.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/gimbal/protocols/: legacy.hpp  neo.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
src/: auto_aim_debug_mpc.cpp  auto_buff_debug.cpp  auto_buff_debug_mpc.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  standard_mpc.cpp  uav.cpp  uav_debug.cpp
systemd/: sp_vision.service  start_sp_vision.sh
tasks/auto_aim/: CMakeLists.txt  aimer.hpp  armor.cpp  detector.cpp  detector.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.cpp  yolo.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/planner/: planner.cpp
tasks/auto_aim/planner/tinympc/: admm.cpp  codegen.cpp
tasks/auto_buff/: CMakeLists.txt  ceres_rune_predictor.cpp  ceres_rune_predictor.hpp  rune_detector.cpp  rune_detector.hpp  yolo11_buff.cpp  yolo11_buff.hpp
tasks/omniperception/: CMakeLists.txt  perceptron.cpp  perceptron.hpp
tests/: auto_aim_test.cpp  auto_buff_test.cpp  camera_thread_test.cpp  fire_test.cpp  gimbal_pose_test.cpp  gimbal_response_test.cpp  gimbal_state_test.cpp  handeye_test.cpp  minimum_vision_system.cpp
tools/: CMakeLists.txt  crc.hpp  logger.cpp  math_tools.cpp  math_tools.hpp  offline_rune_predict.cpp  offline_rune_validate.py  recorder.cpp  recorder.hpp  rune_video_test.cpp  thread_pool.hpp
tools/infer/: trt_engine.cpp  trt_engine.hpp
